# cnn_demo

./: .gitignore  README.md  dataset.py  export.py  main.py  model.py  pyproject.toml
C/: CMakeLists.txt  cnn_demo.c
C/include/: cnn_demo.h
